--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "inquirer": "^12.9.6"
   }
 }
